adding config loader